newer nginx config that actually works.

--- a/backend/nginx-site.conf
+++ b/backend/nginx-site.conf
@@ -3,11 +3,10 @@ server {
     server_name localhost;
     charset     utf-8;
 
-    root /home/ubuntu/ci_hackathon-master/frontend/;
-    index index.html;
+root /home/ubuntu/ci_hackathon-master/frontend/;
+index index.html;
 
-    location / { try_files $uri @conservationintl; }
-    location @conservationintl {
+    location /api/v1 {
         include uwsgi_params;
         uwsgi_pass unix:/run/uwsgi/app/conservationintl/socket;
     }
